trying to enable preview for tests